--- a/templates/courses/user/view_course.html
+++ b/templates/courses/user/view_course.html
@@ -107,7 +107,7 @@
         <div class="accordion-item">
             <h2 class="accordion-header" id="quizHeading">
                 <button class="accordion-button collapsed bg-secondary text-white" type="button" data-bs-toggle="collapse" data-bs-target="#quizCollapse" aria-expanded="false" aria-controls="quizCollapse">
-                    {{ course_quiz.title }} — Cuestionario Final
+                    Cuestionario Final
                 </button>
             </h2>
             <div id="quizCollapse" class="accordion-collapse collapse" aria-labelledby="quizHeading" data-bs-parent="#quizAccordion">
@@ -158,9 +158,11 @@
                             <div class="alert alert-info">Este cuestionario aún no tiene preguntas.</div>
                         {% endfor %}
                         <button type="submit" class="btn btn-primary btn-lg w-100 mt-4"
-                        {% if attempts_left is not None and attempts_left <= 0 %}disabled{% endif %}>
+                            {% if attempts_left is not None and attempts_left <= 0 or is_passed %}disabled{% endif %}>
                             Enviar Cuestionario
                         </button>
+
+
                         {% if attempts_left is not None and attempts_left <= 0 %}
                             {% if is_passed %}
                                 <div class="alert alert-success text-center">
