--- a/templates/courses/admin/admin_course_stats.html
+++ b/templates/courses/admin/admin_course_stats.html
@@ -83,7 +83,7 @@
                 </table>
                 <div class="mt-4 text-center">
                     <a href="javascript:history.back()" class="btn btn-outline-primary px-5">
-                        <i class="fas fa-arrow-left me-2"></i> Regresar a mis cursos
+                        <i class="fas fa-arrow-left me-2"></i> Regresar a cursos
                     </a>
                 </div>
             </div>
