desabilite el olvidaste tu contraseña?

--- a/templates/authapp/login.html
+++ b/templates/authapp/login.html
@@ -189,7 +189,7 @@
                     <input type="submit" name="signin" id="signin" class="form-submit" value="Entrar" style="display:block; width: 100%;"/>
                 </div>
             </form>
-            <a href="{% url 'password_reset' %}" class="signup-image-link" style="color: rgb(169,202,72)">¿Olvidaste tu contraseña?</a>
+            <!--<a href="{% url 'password_reset' %}" class="signup-image-link" style="color: rgb(169,202,72)">¿Olvidaste tu contraseña?</a>-->
         </div>
     </div>
 </body>
