--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -9,20 +9,22 @@
             <li class="nav-item dropdown">
                 <a class="nav-icon dropdown-toggle" href="#" id="alertsDropdown" data-bs-toggle="dropdown">
                     <div class="position-relative">
-                        <i class="align-middle" data-feather="bell"></i>
-                    <!--<span class="indicator"></span>
-                    </div>-->
+                    <i class="align-middle" data-feather="bell"></i>
+                    <span id="new-courses-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger d-none">
+                        0
+                    </span>
+                    </div>
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-end py-0" aria-labelledby="alertsDropdown">
                     <div class="dropdown-menu-header">
                         Notificaciones proximamente
                     </div>
-                    <div class="dropdown-menu-footer">
+                    <!--<div class="dropdown-menu-footer">
                         <a href="#" class="text-muted">Ver todas las notificaciones</a>
                     </div>
                 </div>
             </li>
-            <!--<li class="nav-item dropdown">
+            <li class="nav-item dropdown">
                 <a class="nav-icon dropdown-toggle" href="#" id="messagesDropdown" data-bs-toggle="dropdown">
                     <div class="position-relative">
                         <i class="align-middle" data-feather="message-square"></i>
@@ -91,12 +93,12 @@
             </li>-->
             <li class="nav-item dropdown">
                 <a class="nav-icon dropdown-toggle d-inline-block d-sm-none" href="#" data-bs-toggle="dropdown">
-    <i class="align-middle" data-feather="settings"></i>
-  </a>
+                        <i class="align-middle" data-feather="settings"></i>
+                    </a>
 
-        <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
-        <span class="text-dark">{{user.username}}</span>
-  </a>
+                            <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
+                            <span class="text-dark">{{user.username}}</span>
+                    </a>
                 <div class="dropdown-menu dropdown-menu-end">
                     <!--<a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1" data-feather="user"></i> Profile</a>
                     <a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="pie-chart"></i> Analytics</a>
