--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -77,6 +77,7 @@
 
 	<!-- Incluir SweetAlert2 desde CDN -->
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	<script src="{% static 'js/navbar.js' %}"></script>
 
     {% block scripts %}
     {% endblock %}
