--- a/templates/courses/admin/admin_courses.html
+++ b/templates/courses/admin/admin_courses.html
@@ -45,7 +45,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <h1 class="mt-1 mb-3">0</h1>
+                                <h1 class="mt-1 mb-3">{{ completed_courses_count }}</h1>
 
                             </div>
                         </div>
