ya sirve el filtro de cursos completados

--- a/templates/courses/admin/admin_courses.html
+++ b/templates/courses/admin/admin_courses.html
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                     <div class="col-3">
-                        <div class="card col-12 filtro-card border-2 rounded-4" data-estado="" style="cursor: pointer;">
+                        <div class="card col-12 filtro-card border-2 rounded-4" data-estado="completado" style="cursor: pointer;">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col mt-0">
