ya hay permisos, ya puedes subir csv, ya se ven los usuarios. ya puedes activar y desactivar usuarios

--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -24,7 +24,7 @@
             {% if user.is_superuser %}
                 <li class="sidebar-item active">
                     <a class="sidebar-link" href="{% url 'user_dashboard' %}">
-                        <i class="fa-solid fa-user"></i></i><span class="align-middle">Generar usuarios</span>
+                        <i class="fa-solid fa-user"></i></i><span class="align-middle">Usuarios</span>
                     </a>
                 </li>
                 
