--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -35,7 +35,7 @@
 
 	<link href="{% static "template/css/app.css" %}" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-
+	<link href="{% static "template/css/app.css" %}" rel="stylesheet">
 	{% block styles %}{% endblock %}
 </head>
 
