--- a/templates/users/user_dashboard.html
+++ b/templates/users/user_dashboard.html
@@ -30,7 +30,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for emp in empleados %}
+      {% for emp in page_obj  %}
       <tr id="row-{{ emp.user.id }}">
         <td class="user-info">
           <div class="details">
@@ -65,6 +65,27 @@
     </tbody>
   </table>
 </div>
+<nav>
+  <ul class="pagination">
+    {% if page_obj.has_previous %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
+      </li>
+    {% endif %}
+
+    <li class="page-item disabled">
+      <span class="page-link">
+        Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}
+      </span>
+    </li>
+
+    {% if page_obj.has_next %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page_obj.next_page_number }}">Siguiente</a>
+      </li>
+    {% endif %}
+  </ul>
+</nav>
 
 <script>
   const csrfToken = "{{ csrf_token }}";
