--- a/templates/users/user_dashboard.html
+++ b/templates/users/user_dashboard.html
@@ -11,7 +11,6 @@
 
   <div class="search-bar mb-3">
     <input id="searchUsuarios" type="text" placeholder="Buscar por nombre o usuario" class="form-control w-auto">
-
     <form action="{% url 'upload_employees_csv' %}" method="post" enctype="multipart/form-data" class="upload-form d-inline-block ms-3">
       {% csrf_token %}
       <input type="file" name="csv_file" accept=".csv">
@@ -30,7 +29,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for emp in page_obj  %}
+      {% for emp in empleados  %}
       <tr id="row-{{ emp.user.id }}">
         <td class="user-info">
           <div class="details">
@@ -65,31 +64,18 @@
     </tbody>
   </table>
 </div>
+
 <nav>
-  <ul class="pagination">
-    {% if page_obj.has_previous %}
-      <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
-      </li>
-    {% endif %}
-
-    <li class="page-item disabled">
-      <span class="page-link">
-        Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}
-      </span>
-    </li>
-
-    {% if page_obj.has_next %}
-      <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.next_page_number }}">Siguiente</a>
-      </li>
-    {% endif %}
-  </ul>
+  <div id="pagination" class="mt-3"></div>
 </nav>
 
+{% block scripts %}
 <script>
-  const csrfToken = "{{ csrf_token }}";
-  const toggleUrl = "{% url 'toggle_user_status' %}";
+  window.csrfToken = "{{ csrf_token }}";
+  window.toggleUrl = "{% url 'toggle_user_status' %}";
 </script>
+
 <script src="{% static 'js/users.js' %}"></script>
+{% endblock %}
+
 {% endblock %}
