--- a/templates/users/user_dashboard.html
+++ b/templates/users/user_dashboard.html
@@ -9,6 +9,14 @@
 <div class="container">
   <h1>Usuarios</h1>
 
+    {% if messages %}
+      {% for message in messages %}
+        <div id="message-container"
+            data-message="{{ message }}"
+            data-tags="{{ message.tags }}">
+        </div>
+      {% endfor %}
+    {% endif %}
   <div class="search-bar mb-3">
     <input id="searchUsuarios" type="text" placeholder="Buscar por nombre o usuario" class="form-control w-auto">
     <form action="{% url 'upload_employees_csv' %}" method="post" enctype="multipart/form-data" class="upload-form d-inline-block ms-3">
@@ -64,6 +72,26 @@
     </tbody>
   </table>
 </div>
+
+
+<!-- ✅ Modal Bootstrap -->
+<div class="modal fade" id="messageModal" tabindex="-1" aria-labelledby="messageModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="messageModalLabel">Aviso</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        <!-- Aquí va el mensaje -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <nav>
   <div id="pagination" class="mt-3"></div>
