ya los filtros se ven bien al compactar

--- a/templates/courses/admin/admin_courses.html
+++ b/templates/courses/admin/admin_courses.html
@@ -12,11 +12,11 @@
     </a>
 </div>
     <div class="row">
-        <div class="col-12 d-flex">
+        <div class="col-12">
             <div class="w-100">
                 <div class="row">
-                    <div class="col-3">
-                        <div class="card col-12 filtro-card border-2 rounded-4" data-estado="all" style="cursor: pointer;">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="card filtro-card border-2 rounded-4" data-estado="all" style="cursor: pointer;">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col mt-0">
@@ -32,7 +32,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card col-12 filtro-card border-2 rounded-4" data-estado="completado" style="cursor: pointer;">
                             <div class="card-body">
                                 <div class="row">
@@ -51,7 +51,7 @@
                         </div>
                         
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card col-12 filtro-card border-2 rounded-4" data-estado="activo" style="cursor: pointer;">
                             <div class="card-body">
                                 <div class="row">
@@ -71,7 +71,7 @@
                         </div>
                         
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card col-12 filtro-card border-2 rounded-4" data-estado="inactivo" style="cursor: pointer;">
                             <div class="card-body">
                                 <div class="row">
